# legal-jm

./: .cursorignore  .gitignore  README.md  ReadmeNX.md  nx.json  package-lock.json  package.json  prompt.md  startup.md  startup_2.md  tsconfig.base.json
.cursor/rules/: angular.mdc  nest.mdc  python.mdc
apps/api/: jest.config.ts  package.json
apps/api-e2e/: jest.config.ts  package.json  tsconfig.json
apps/api/src/: main.ts
apps/api/src/app/: app.module.ts  prisma.service.ts
apps/api/src/app/health/: health.controller.ts
apps/python/: README.md  config.py  logging_conf.py  main.py  models.py  pyproject.toml
apps/python/db/: __init__.py  connection.py  repositories.py
apps/python/embeddings/: __init__.py  chunker.py  generator.py  service.py
apps/python/ingest/: __init__.py  normalizer.py  parser.py  service.py
apps/python/ingest/sources/: __init__.py  acts.py  base.py  cases.py  regulations.py
apps/web/: tsconfig.json
apps/web/src/: index.html  styles.scss
apps/web/src/app/: app.routes.ts
apps/web/src/app/features/admin-users/: admin-users.component.ts
apps/web/src/app/features/ask/: ask.component.ts
apps/web/src/app/shared/: material.module.ts
infra/: env.example  neon.md
prisma/: schema.prisma
prisma/migrations/20251113202709_first/: migration.sql
prompts/: step-1-auth.md  step-2-documents-api.md  step-3-frontend-services.md  step-4-frontend-components.md  step-5-scraper-copy.md  step-5-scraper.md  step-6-embeddings.md  step-7-rag-api.md  step-8-ingest-admin.md  step-9-testing-polish.md
(+6 files in other folders)
